sass/main.scss
@import "reset.scss";
@import "brand-colors.scss";
@import "ui-icons-font.scss";

$MiaGroteskBold: 'MiaGrotesk-Bold', sans-serif;
$MiaGroteskBoldItalic: 'MiaGrotesk-BoldItalic', sans-serif;
$MiaGroteskItalic: 'MiaGrotesk-Italic', sans-serif;
$MiaGroteskLight: 'MiaGrotesk-Light', sans-serif;
$MiaGroteskLightItalic: 'MiaGrotesk-LightItalic', sans-serif;
$MiaGroteskRegular: 'MiaGrotesk-Regular', sans-serif;
$MiaGroteskBlack: 'MiaGrotesk-Black', sans-serif;
$MiaGroteskRlackItalic: 'MiaGrotesk-BlackItalic', sans-serif;


body{
    font-family: $MiaGroteskLight;
    font-weight: 400;
    color:$primary;
    margin: 0;
    line-height:1.3em;
}

a {
  color: rgba(239, 53, 53, .9);
  font-weight: 500;
  text-decoration: none;
  font-size:1em;
}

a:hover {
  color: rgba(35, 35, 35, .65);
  font-weight: 500;
}

#search {
      /*margin: 8px;*/
    }

h1,h2,h3,h4,h5,h6 {
    font-family: $MiaGroteskBold;
}

.highlight em, h1 em, h2 em {
  background-color: yellow;
}

.main-app-bar{
    color:#fff;
    background-color:$primary;
}

header{
    width:100%;
    background-color:$primary;
    padding-top: 1em;
    position:relative;
}

.quilt-search-wrap{
    min-height: 3em;
    background: #222;
}

.logo-container{
    background-image: url("../images/MIA_LOGO_MARK.svg");
    background-repeat: no-repeat;
    height: 3em;
    width:auto;
    color:#fff;
    margin: 0 0 -2px -2px;
}

.wordmark-container{
    background-image: url("../images/MIA_LOGO_WORDMARK.svg");
    background-repeat: no-repeat;
    color:#fff;
    position:absolute;
    height:40px;
    width:200px;
    right:20px;
    top:20px;
}

.agg-wrap{
    background-color:#ffffff;
    padding: 0 0 1em 0;
}

.agg-wrap h2{
    color:$whitish;
    text-align:center;
    cursor: pointer;
    line-height: 1em;
    padding-top: 7px;
}

#aggs{
    padding:1em 0 0 0;
    height:auto;
    overflow: hidden;
    -webkit-transition: height 0.3s ease-in;
    -moz-transition: height 0.3s ease-in;
    -o-transition: height 0.3s ease-in;
    -ms-transition: height 0.3s ease-in;
    transition: height 0.3s ease-in;
    position: relative;
}

.agg-wrap h2{
    text-align:center;
}

#aggs dl{
    display:inline-block;
    padding:0 23px 0 0;
    white-space: normal;
}
#more-aggs {
  width: 100%;
  position: relative;
  float: left;
  margin: 10px 0;
  display: inline-block;
  background: rgba(35,35,35,.3);
  height: 39px;
}
#more-aggs .material-icons {
  font-size: 1em;
}
#aggs dt{
    font-weight:400;
    color:$primary;
    text-transform:uppercase;
    font-size:0.75em;
    padding:2px 0;
    text-align: left;
    margin:0 0 10px 0;
    border-top:3px solid $primary;
    white-space: normal;
}
#aggs #more-aggs dd {
  padding: 9px 15px;
  background: $primary;
  color: #ffffff;
  display: inline-block;
  border: none;
  opacity: 1;
  margin: 2px;
  cursor: pointer;
}
.toggleOpen, .toggleClose {
  position: absolute;
  right: 0;
  background: $primary;
  color: white;
  padding: 10px;
}
#aggs dd{
    line-height:1.1em;
    padding: .25em;
}
.objects-wrap{
    width:33%;float:left;
    padding:10px;
    margin-right:10px;
    background-color:#e0e0e0;
}

    .artwork-result{
        padding:10px;
        margin-bottom:10px;
        background-color:#fff;
        -webkit-box-shadow: 2px 2px 4px 0 rgba(0,0,0,.25);
        box-shadow: 2px 2px 4px 0 rgba(0,0,0,.25);
        cursor: pointer;
    }

    .artwork-result h1{margin:0;padding:0;}
    .artwork-result h2{margin:0;padding:0;line-height:1em;}

    .objects-wrap .artwork-image{
        height:100px;
    }

    .objects-wrap .artwork-image > div > img{
        max-height:100px;
    }

    .objects-wrap .focused {
      border-top: 3px solid $primary;
      margin-top: -3px;
    }

    /* not working
    .artwork-result p:not(:first-child){
        display:none;
    }
    */

    .artwork-image div > p, .artwork-result .provenance {
        display: none;
    }

    .artwork-result p.location{
        text-align:right;
        display: inline-block;
    }

    .artwork-image div > p:first-child{
        display: none;
    }

.objects-focus-sticky{
    position: fixed;
    top: 0;
    right: 0;
}

.objects-focus{
    float:left;
    padding-top:2em;
    border-top:3px solid $primary;
    position:relative;
}

    .objects-focus h2{
        font-size:2.5em;
        font-family: $MiaGroteskLightItalic;
        font-style: italic;
    }

    .objects-focus h2 a {
      color: $primary;
    }

    .objects-focus h5{
        font-family: $MiaGroteskBold;
        font-size:1.25em;
        margin-bottom:10px;
        cursor:hand;
        
    }
    
    .objects-focus .date{
        font-size:1em;
        font-family: $MiaGroteskRegular;
        font-style: normal;
    }

    .objects-focus .tombstone{
        font-size:smaller;
        line-height:1.3em;
        margin:1em 0;
    }


.search-wrap div:first-child {
    width: 23em;
    margin:0 auto;
    color:$primary;
    opacity: 0.95;
}
.search-wrap .mdl-textfield {
  min-width: 100px;
}

.search-wrap div h2{
    color:$whitish;
    background-color:$primary;
    padding:0.65em;
    margin-bottom:15px;
    font-size:2em;
    font-family: $MiaGroteskRegular;
}

.search-wrap div input{
    width:100%;
    color:$primary;
    font-family: $MiaGroteskLight;
}

.mdl-textfield{
    width:100%;
    min-width:350px;
    padding-left:1em;
    padding-right:1em;
    background-color: white;
    border-radius:3px;
    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.mdl-textfield__input {
    color:$primary;
    border-color:$primary;
    border-width:0 0 3px 0;
    padding:0.5em;
    text-align:center;
}

.objectTotal {
    top:0;
    color:$primary;
}
.numbers {
  font-family: $MiaGroteskBold;
  color: rgba(35,35,35,.5);
  padding-left: 10px;
  font-size: .9em;
}
::-webkit-input-placeholder {
   color: $support;
}

:-moz-placeholder { /* Firefox 18- */
   color: $support;
}

::-moz-placeholder {  /* Firefox 19+ */
   color: $support;
}

:-ms-input-placeholder {
   color: $support;
}
/* ===== TOOLBAR STYLES ===== */
.toolbar {
  background: $primary;
}
.filter-button {
  border: 3px solid #ffffff;
  padding: 5px 20px;
  float: right;
}
.filter-button a, .filter-button a:hover {
  color: #ffffff;
}
.filter-button:hover {
  opacity: .7;
}
.views {
  color: #ffffff;
  font-size: 2em;
}
.views .B:hover, .views .D:hover {
  opacity: .7;
}
/* ===== LANDING PAGE STYLES ===== */
.landingPageBody, .departmentPage {
  display: inline-block;
}
.shortcutLinks {
  width: 100%;
  text-align: left;
  margin-bottom: 20px;
}
.shortcutLinks a {
  color: rgb(35,35,35);
  transition: ease all 0.8s;
}
.shortcutlinks div:hover {
  opacity: .5;
}
.shortcutLinks sub {
  font-family: $MiaGroteskLight, sans-serif;
  font-size: 1em;
  margin-right: 5px;
}
.shortcutLinks h2 {
  font-family: $MiaGroteskRegular, sans-serif;
  font-size: 1.5em;
  border-top: 3px solid rgb(35,35,35);
  padding: 7px 0 0;
  margin: 7px 0;
  line-height: 1em;
}

.departmentList {
  display: inline-block;
}
.departmentList h2 {
  font-family: $MiaGroteskRegular, sans-serif;
  font-size:2em;
}
.departmentLink h2 {
  font-size: 1.5em;
  font-family: $MiaGroteskLight, sans-serif;
  border-top: 3px solid rgba(35,35,35,1);
  padding: 7px 0;
  margin: 7px 0;
  line-height: 1em;
  color: rgb(35,35,35);
}
.departmentLink {
  float:left;
  display: inline-block;
  vertical-align: bottom;
  text-align: left;
  border:5px solid #ffffff;
}
.departmentListItem {
  width: 100%;
  height: 150px;
}
.departmentListItem.africa {
  background:url("https://api.artsmia.org/images/4866/600/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.cssaa {
  background:url("https://api.artsmia.org/images/12134/600/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.contemporary {
  background:url("https://api.artsmia.org/images/1721/600/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.dats {
  background:url("https://api.artsmia.org/images/8024/800/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.jka {
  background:url("https://api.artsmia.org/images/7505/600/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.paintings {
  background:url("https://api.artsmia.org/images/1348/800/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.photography {
  background:url("https://api.artsmia.org/images/89324/800/medium.jpg") no-repeat center center;
  background-size: cover;
}
.departmentListItem.prints {
  background:url("https://api.artsmia.org/images/9194/800/medium.jpg") no-repeat center center;
  background-size: cover;
}
a.departmentLink {
  transition: ease all 0.8s;
}
a.departmentLink:hover  {
  opacity: .5;
}
/* ===== DEPARTMENT PAGES ===== */
.departmentPage h2 {
  background: transparent;
  font-size: 1.75em;
  width: 100%;
  text-align: left;
  padding: 7px 0 15px;
  margin: 0;
  line-height: 1em;
}
.departmentContent, .departmentResources {
  padding: 0 5px;
}
.departmentResources h3 {
  border-top: 3px solid rgb(35,35,35);
  font-size: 1.2em;
  width: 100%;
  font-family: $MiaGroteskRegular;
  line-height: 1em;
  padding: 7px 0;
  margin-top: 1em;
}
.departmentResources h3:first-child {
  margin-top: 0;
}
.departmentPage h2 a{
  color: rgb(35,35,35);
}
.departmentPage p {
  margin: 0 0 7px 0;
}
.curatorBio, .affinity, .resources {
  display: inline-block;
  width: 100%;
  height: auto;
  margin-bottom: 20px;
}
.curatorPic, .affinityImage {
  float:left;
  display: inline-block;
  background: rgba(35,35,35,.3);
  margin-right: 20px;

  img {
    max-width: 150px;
    max-height: 150px;
  }
}
.curatorBio h4 {
  font-size: 1.1em;
}
.curatorBio h5 {
  font-family: $MiaGroteskRegular;
  font-size: .9em;
  padding-bottom: 1em;
}

.quilt-wrap .lazy-load {
  display: inline-block;
}


/* ===== artwork.js STYLES ===== */

.artwork #map {
  position: relative;
  left: 0;
  width: 65%;
  height: calc(100% - 4em);
  z-index: 1000;
}
.artwork .sticky #map {
  width: 100%;
  height: 100%;
}
.artwork #map .imageStatus {
  position: absolute;
  bottom: 3em;
  width: 100%;
  text-align: center;
  padding: 0 20%;
}

.artwork .info {
  position: absolute;
  width: 35%;
  background: #eee;
  min-height: calc(100% - 4em);
  padding: 1em;
  right: 0;
  overflow-y:scroll;
}
.artwork .objects-focus {
  border-top: none;
  float: none;
  padding-top: 0;
  background-color:#fff;
}
.artwork .objects-focus .artwork-image {
  display: none;
}

.objects-focus div > p {
  margin-bottom: 1em;
}

.objects-focus span {
  font-style: normal;
}

.objects-focus i.material-icons {
  font-size: 0.8em;
  margin: 0 0.5em 0 0.1em;
}

.artwork-detail{
    display:table;
    font-size:smaller;
    line-height:1.3em;
}
.detail-row{
    display:table-row;
}
.detail-title{
    display:table-cell;
    padding:5px 0;
    font-family: $MiaGroteskRegular, sans-serif;
}
.detail-content{
    display:table-cell;
    padding:5px 5px 5px 15px;
}
h5.details-title {
    border-top:3px solid $primary;
    margin-top:1em;
    margin-bottom:0.5em;
    padding-top:3px;
    cursor:pointer;
}

.objects-page-link{
    font-size:8px;
    text-transform: uppercase;
    text-align:center;
    width:32px;
    position:absolute;
    top:50px;
    right:10px;
    line-height:1em; 
    font-family: $MiaGroteskBold;  
}

.objects-page-icon{
    border:3px solid $primary;
    border-radius: 5px;
    background-image:url('../images/ic_remove_red_eye_black_24px.svg');
    width:32px;
    height:32px;
    color:$primary;
    background-size:cover;
    margin-bottom:3px;
    cursor: hand;
 }

